0025169: STEP Reader - allow opened shells to be an outer for ManifoldSolidBrep

Allow opened shells to be an outer for ManifoldSolidBrep